--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=RoomRental
 
-server.port=9090
+server.port=9999
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=room_rental_db
+
+
+Profile.image=image/profilePicture
