--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,19 @@ spring.data.mongodb.database=room_rental_db
 Profile.image=image/profilePicture
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+# Email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=guide.daily.pro@gmail.com
+spring.mail.password=sret cddy lqxu foab
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.login.register=DEBUG
+
+# Custom application properties
+app.otp.expiration=300000  # OTP expiration time in milliseconds (5 minutes)
