login with google configured

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=RoomRental
 
-server.port=9999
+server.port=9090
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=room_rental_db
@@ -25,3 +25,21 @@ logging.level.com.login.register=DEBUG
 
 # Custom application properties
 app.otp.expiration=300000  # OTP expiration time in milliseconds (5 minutes)
+
+# oauth2 configuration:
+#google configuration:
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=1297343361-rugajgvurdgeu194rfd0hk5po74nqajt.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.security.oauth2.client.registration.github.client-name=github
+spring.security.oauth2.client.registration.github.client-secret=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
+spring.security.oauth2.client.registration.github.client-id=1297343361-rugajgvurdgeu194rfd0hk5po74nqajt.apps.googleusercontent.com
+spring.security.oauth2.client.registration.github.scope=email,profile
+
+
+
+# swagger configuration:
+#springdoc.swagger-ui.path=/swagger-ui.html
+#springdoc.api-docs.path=/v3/api-docs
