--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,9 @@ spring.data.mongodb.database=room_rental_db
 
 
 Profile.image=image/profilePicture
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+Review.image=image/reviewPicture
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
 
 # Email configuration
 spring.mail.host=smtp.gmail.com
