add create room form service and get room service has been complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.data.mongodb.database=room_rental_db
 
 Profile.image=image/profilePicture
 Review.image=image/reviewPicture
+Room.image=image/roomPicture
+
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
 
