room sava api enhanced

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,7 @@ spring.security.oauth2.client.registration.github.client-secret=GOCSPX-8JfLBMtdS
 spring.security.oauth2.client.registration.github.client-id=1297343361-rugajgvurdgeu194rfd0hk5po74nqajt.apps.googleusercontent.com
 spring.security.oauth2.client.registration.github.scope=email,profile
 
+naya.aawas.user.confirm= confirmation-link-page
 
 
 # swagger configuration:
