--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,12 @@ spring.servlet.multipart.max-request-size=15MB
 # Email configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=guide.daily.pro@gmail.com
-spring.mail.password=sret cddy lqxu foab
+#spring.mail.username=guide.daily.pro@gmail.com
+#spring.mail.password=sret cddy lqxu foab
+spring.mail.username=noreply.aawas@gmail.com
+spring.mail.password= yyvj jmpk xfgl nlkg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 
 # Logging configuration
 logging.level.org.springframework=INFO
