--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.data.mongodb.database=room_rental_db
 Profile.image=image/profilePicture
 Review.image=image/reviewPicture
 Room.image=image/roomPicture
+Multiple.room.image=image/roomPicture/multiple
 
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
