added reset password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,7 @@ spring.security.oauth2.client.registration.github.client-id=1297343361-rugajgvur
 spring.security.oauth2.client.registration.github.scope=email,profile
 
 naya.aawas.user.confirm= confirmation-link-page
+naya.aawas.user.reset= Reset-password-link-page
 
 
 # swagger configuration:
